# MciData

./: .gitattributes  .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml  fetch-and-parse.yml  pytest.yml
data/: DirectFeed-12-february-2026-mci-closed-case-report.txt  DirectFeed.txt
output/: mci_output.csv
src/: __init__.py  classes.py  fetch_reports.py  main.py  parse_reports.py  regexes.py
src/MciFileProcessor/: __init__.py  mci_file_processor.py
src/PropertyMci/: Address.py  PropertyMci.py  WorkItem.py  __init__.py  address.py  docket.py  property_mci.py  work_item.py
src/evaluate_ocr_quality/: __init__.py  evaluate_ocr_quality.py
src/finite_machine_states/: __init__.py  fsm_state.py
src/lines/: __init__.py  counties.py  lines.py  regexes.py  states.py  street_types.py  work_status.py
src/raw_text_cleanup/: evaluate_ocr_quality.py
src/regexes/: __init__.py  counties.py  filename_patterns.py  regexes.py  street_types.py  work_status.py
tests/: test_parse_reports.py
tests/data/: may-2024-expected.csv
tests/lines/: test_lines.py  test_regexes.py
tests/regexes/: test_filename_patterns.py
